--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "authors": [
         ""
     ],
-    "origin": "https://github.com//AMPTemplates.git",
-    "url": "https://github.com//AMPTemplates",
+    "origin": "https://github.com/benringrose/AMP-Modules.git",
+    "url": "https://github.com/benringrose/AMP-Modules",
     "imagefile": "",
     "prefix": ""
 }
