Update Discord Bot

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-    "id": "b3816afd-088b-49d6-8422-a524b59e3140",
+    "id": "f8d91b76-d3cc-4a32-9cb5-08df765af01a",
     "authors": [
         ""
     ],
-    "origin": "https://github.com/benringrose/AMP-Modules.git",
-    "url": "https://github.com/benringrose/AMP-Modules",
+    "origin": "https://github.com//AMPTemplates.git",
+    "url": "https://github.com//AMPTemplates",
     "imagefile": "",
     "prefix": ""
 }
